use HashMap instead of Map.of util as it's not avaialble on Java8